fixed low contrast and search-form whitespace

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,8 +6,7 @@
 
 :root {
   font-size: 62.5%;
-  --clr-primary: hsl(169, 6%, 66%);
-  --clr-secondary: hsl(192, 18%, 48%);
+  --clr-primary: hsl(192, 18%, 48%);
   --clr-accent: hsl(7, 65%, 72%);
   --text-light: hsl(0, 0%, 95%);
 }
@@ -30,6 +29,7 @@ main {
 }
 
 button {
+  cursor: pointer;
   border: none;
   background: var(--clr-accent);
 }
@@ -44,7 +44,6 @@ input {
   padding: 1.5em;
   width: 100%;
   height: 6.5em;
-  background: var(--clr-secondary);
 }
 
 .socials__GH {
@@ -62,8 +61,13 @@ input {
   height: 100%;
 }
 
+.search-form__input {
+  padding-left: 0.75em;
+}
+
 .search-form__btn {
   border-radius: 0 0.25em 0.25em 0;
+  padding: 0.5em;
 }
 
 .search-form__input {
@@ -115,4 +119,10 @@ input {
 .extra-value {
   font-size: 1.2em;
   font-weight: bold;
+}
+
+@media only screen and (min-width: 800px) {
+  .header {
+    padding: 1.5em 3em;
+  }
 }
